; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_kpc_x86.c_kpc_set_running_mp_call.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_kpc_x86.c_kpc_set_running_mp_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kpc_running_remote = type { i32, i32, i32 }

@KPC_CLASS_FIXED_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @kpc_set_running_mp_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kpc_set_running_mp_call(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.kpc_running_remote*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.kpc_running_remote*
  store %struct.kpc_running_remote* %5, %struct.kpc_running_remote** %3, align 8
  %6 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %3, align 8
  %7 = call i32 @assert(%struct.kpc_running_remote* %6)
  %8 = call i64 (...) @kpc_controls_fixed_counters()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %3, align 8
  %12 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @KPC_CLASS_FIXED_MASK, align 4
  %15 = and i32 %13, %14
  %16 = call i32 @set_running_fixed(i32 %15)
  br label %17

17:                                               ; preds = %10, %1
  %18 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %3, align 8
  %19 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.kpc_running_remote*, %struct.kpc_running_remote** %3, align 8
  %22 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @set_running_configurable(i32 %20, i32 %23)
  ret void
}

declare dso_local i32 @assert(%struct.kpc_running_remote*) #1

declare dso_local i64 @kpc_controls_fixed_counters(...) #1

declare dso_local i32 @set_running_fixed(i32) #1

declare dso_local i32 @set_running_configurable(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
